--- a/src/assests/three_render.html
+++ b/src/assests/three_render.html
@@ -115,7 +115,7 @@
       window.containerInfPath = containerInfPath;
       window.isLogin = isLogin;
     </script>
-    <script type="module" src="3JS copy.js"></script>
+    <!-- <script type="module" src="./3JS copy.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.umd.js"></script>
     <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/25.0.0/tween.amd.js"
